--- a/JpaTest/src/main/resources/application.properties
+++ b/JpaTest/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&charaterEncoding=utf-8
-spring.datasource.username=root
+spring.datasource.username=chime
 spring.datasource.password=chime1234
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
